--- a/src/styles/MyBookingsPage.css
+++ b/src/styles/MyBookingsPage.css
@@ -129,6 +129,13 @@
   position: relative;
 }
 
+.related-room-image2 {
+  height: 20px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
 .booking-status-badge {
   position: absolute;
   top: 15px;
@@ -224,7 +231,7 @@
   flex: 1;
   padding: 10px;
   text-align: center;
-  border-radius: 4px;
+  border-radius: px;
   cursor: pointer;
   font-weight: 500;
   transition: all 0.3s ease;
